--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cdk-devops",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hoegertn/cdk-devops.git"
+    "url": "https://github.com/open-constructs/cdk-devops.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -20,6 +20,7 @@
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
+    "publish:git": "npx projen publish:git",
     "release": "npx projen release",
     "test": "npx projen test",
     "test:watch": "npx projen test:watch",
@@ -39,9 +40,9 @@
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
-    "aws-cdk-lib": "2.1.0",
+    "aws-cdk-lib": "2.222.0",
     "commit-and-tag-version": "^12",
-    "constructs": "10.0.5",
+    "constructs": "10.4.2",
     "eslint": "^9",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
@@ -58,8 +59,8 @@
     "typescript": "^5.9.3"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
-    "constructs": "^10.0.5"
+    "aws-cdk-lib": "^2.222.0",
+    "constructs": "^10.4.2"
   },
   "keywords": [
     "cdk"
