--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 !/.projen/deps.json
 !/.projen/files.json
 !/.github/workflows/pull-request-lint.yml
+!/.github/workflows/auto-approve.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -48,4 +49,5 @@ junit.xml
 .jsii
 tsconfig.json
 !/API.md
+!/.github/workflows/assign-approver.yml
 !/.projenrc.ts
